cmake_minimum_required(VERSION 2.8)
project(elementary)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_executable(say-history "say-history.cpp")
add_executable(correct-sentence "correct-sentence.cpp")
add_executable(first-word "first-word")
add_executable(second-index "second-index.cpp")
add_executable(between-markers "between-markers.cpp")
add_executable(best-stock "best-stock.cpp")
add_executable(popular-words "popular-words.cpp")
add_executable(bigger-price "bigger-price")
add_executable(fizz-buzz "fizz-buzz.cpp")
add_executable(most-numbers "most-numbers.cpp")
add_executable(even-last "even-last.cpp")
add_executable(secret-message "secret-message.cpp")
add_executable(three-words "three-words.cpp")
add_executable(index-power "index-power.cpp")
add_executable(right-to-left "right-to-left.cpp")
add_executable(digits-multiplication "digits-multiplication.cpp")
add_executable(number-radix "number-radix.cpp")
add_executable(absolute-sorting "absolute-sorting.cpp")
add_executable(the-most-frequent "the-most-frequent.cpp")
